# wikipedia-wordcount

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: di.py  main.py
app/api/: routes.py  schemas.py
app/clients/: wiki.py
app/core/: text.py
tests/: test_api.py  test_core.py  test_wiki.py
