[project]
name = "MSCIWikiCrawler"
version = "0.1.0"
description = "MSCI assessment"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.31.0",
    "numpy==1.26.4",
    "pydantic>=2.7,<3",
    "httpx>=0.27,<1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
